[gd_scene load_steps=14 format=2]

[ext_resource path="res://Inimigo/Inimigo.gd" type="Script" id=1]
[ext_resource path="res://Inimigo/Soldado.tscn" type="PackedScene" id=2]

[sub_resource type="CapsuleShape" id=1]
height = 2.0

[sub_resource type="CapsuleMesh" id=2]
mid_height = 2.0

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.0862745, 0.819608, 0.0235294, 1 )

[sub_resource type="SphereMesh" id=4]

[sub_resource type="SpatialMaterial" id=5]

[sub_resource type="SphereMesh" id=6]
radius = 0.5
height = 1.0

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0.184314, 0.364706, 0.321569, 1 )

[sub_resource type="CapsuleMesh" id=8]
radius = 0.1
mid_height = 0.5

[sub_resource type="SpatialMaterial" id=9]
albedo_color = Color( 0.352941, 0.352941, 0.352941, 1 )

[sub_resource type="CapsuleMesh" id=10]
radius = 0.1
mid_height = 0.3

[sub_resource type="SpatialMaterial" id=11]
albedo_color = Color( 0.447059, 0.388235, 0.388235, 1 )

[node name="Inimigo" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="CollisionShape"]
visible = false
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="Olhos" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.868047, 0.214524 )
visible = false

[node name="Globo" type="MeshInstance" parent="Olhos"]
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="Pupila" type="MeshInstance" parent="Olhos/Globo"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.101023, 0.548761 )
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="Arma" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.657665, 0.444513, 1.37483 )
visible = false

[node name="Modelo" type="Spatial" parent="Arma"]

[node name="Cano" type="MeshInstance" parent="Arma/Modelo"]
mesh = SubResource( 8 )
material/0 = SubResource( 9 )

[node name="Cabo" type="MeshInstance" parent="Arma/Modelo"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, -0.151993, -0.196795 )
mesh = SubResource( 10 )
material/0 = SubResource( 11 )

[node name="SpawnaBala" type="Position3D" parent="Arma"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.414221 )

[node name="TempoTiro" type="Timer" parent="."]

[node name="DetectaPlayer" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.490513, 0 )
enabled = true
cast_to = Vector3( 0, 0, 30 )

[node name="Soldado" parent="." instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, -1.87245, 0 )
[connection signal="timeout" from="TempoTiro" to="." method="_on_TempoTiro_timeout"]
